--- a/ThesisBeamer.tex
+++ b/ThesisBeamer.tex
@@ -40,7 +40,7 @@
 	\setbeamertemplate{navigation symbols}{} 
 	\setbeamertemplate{mini frames}{}
 	% \useoutertheme{infolines} 
-\setbeamertemplate{footline}{\hbox{\vspace{0.1cm} \insertshortauthor \hspace*{3.5cm} \insertshorttitle \hspace*{4.3cm} \hfill\insertframenumber}} 
+\setbeamertemplate{footline}{\hbox{\vspace{0.1cm}\hspace*{12.2cm} \hfill\insertframenumber}} 
 
 \def\braces#1{[#1]} % to define square parenthesis 
 	
@@ -84,7 +84,7 @@
 
 \addtocounter{framenumber}{-1}	
 
-\setbeamertemplate{footline}{\hbox{\vspace{0.1cm} \insertshortauthor \hspace*{3.5cm} \insertshorttitle \hspace*{4.3cm} \hfill\insertframenumber}} 
+\setbeamertemplate{footline}{\hbox{\vspace{0.1cm} \hspace*{12.2cm} \hfill\insertframenumber}} 
 }	
 
 % \AtBeginSubsection[ ]
@@ -684,48 +684,49 @@
 \begin{figure}[htbp!]
   % \begin{minipage}[c]{0.49\linewidth}
   % 		\centering
-  %     \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-MUMM.png}
+  %     \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-MUMM.png}
   %     % \put (65,17) {\large A) $443nm$}
   %     \end{overpic}  
   % \end{minipage}
   % \hfill
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_MoB-ELM.png}
       % \put (65,17) {\large B) $483nm$}
       \end{overpic}
   \end{minipage}
   \hfill
   % \begin{minipage}[c]{0.49\linewidth}
   % 		\centering
-  %     \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-SWIR.png}
+  %     \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-SWIR.png}
   %     % \put (65,17) {\large C) $561nm$}
   %     \end{overpic}  
   % \end{minipage}
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-MUMM_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-MUMM_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
-  \end{minipage}
+  \end{minipage}\\
+  \vspace{0.3cm}
   % \hfill
   % \begin{minipage}[c]{0.49\linewidth}
   % 		\centering
-  %     \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_SeaDAS-MUMM.png}
+  %     \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_SeaDAS-MUMM.png}
   %     % \put (65,17) {\large C) $561nm$}
   %     \end{overpic}  
   % \end{minipage}
   % \hfill
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=70 00 0 1470,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 0 0 340,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
       \end{overpic}
   \end{minipage}    
 
@@ -742,34 +743,35 @@
 \begin{figure}[htbp!]
   % \begin{minipage}[c]{0.49\linewidth}
   % 		\centering
-  %     \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-MUMM.png}
+  %     \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-MUMM.png}
   %     % \put (65,17) {\large A) $443nm$}
   %     \end{overpic}  
   % \end{minipage}
   % \hfill
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_MoB-ELM.png}
       % \put (65,17) {\large B) $483nm$}
       \end{overpic}
   \end{minipage}
   \hfill
   % \begin{minipage}[c]{0.49\linewidth}
   % 		\centering
-  %     \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-SWIR.png}
+  %     \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-SWIR.png}
   %     % \put (65,17) {\large C) $561nm$}
   %     \end{overpic}  
   % \end{minipage}
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-MUMM_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-MUMM_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
-  \end{minipage}
+  \end{minipage}\\
+  \vspace{0.3cm}
   % \hfill
   % \begin{minipage}[c]{0.49\linewidth}
   % 		\centering
-  %     \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_SeaDAS-MUMM.png}
+  %     \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_SeaDAS-MUMM.png}
   %     % \put (65,17) {\large C) $561nm$}
   %     \end{overpic}  
   % \end{minipage}
@@ -777,14 +779,14 @@
 
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=0 280 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_MoB-ELM.png}
       % \put (65,17) {\large D) $655nm$}
       \end{overpic}
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.49\linewidth}
   	\centering
-      \begin{overpic}[trim=70 0 0 1470,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 0 0 340,clip,width=4cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
       \end{overpic}
   \end{minipage}    
 
@@ -868,30 +870,30 @@
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htbp!]
   \begin{minipage}[c]{0.48\linewidth}
-  		\centering
-      \begin{overpic}[trim=110 0 140 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B1.png}
-      \put (20,40) {A) 443nm} 
+      \centering
+      \begin{overpic}[trim=30 0 50 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B1.png}
+      \put (20,40) {(a) 443nm} 
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
-  	\centering
-      \begin{overpic}[trim=110 0 140 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B2.png}
-      \put (20,40) {B) 483nm}  	 	
+    \centering
+      \begin{overpic}[trim=110 0 180 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B2.png}
+      \put (20,40) {(b) 483nm}     
       \end{overpic}
   \end{minipage}
 
     \begin{minipage}[c]{0.48\linewidth}
-  		\centering
-      \begin{overpic}[trim=110 0 140 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B3.png}
-      \put (20,40) {A) 561nm} 
+      \centering
+      \begin{overpic}[trim=110 0 180 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B3.png}
+      \put (20,40) {(c) 561nm} 
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
-  	\centering
-      \begin{overpic}[trim=110 0 140 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B4.png}
-      \put (20,40) {B) 655nm}  	 	
+    \centering
+      \begin{overpic}[trim=110 0 180 0,clip,width=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B4.png}
+      \put (20,40) {(d) 655nm}     
       \end{overpic}
   \end{minipage}
 
@@ -1523,43 +1525,43 @@ $[nm]$		&	  		      &  		 	  &	  		&			&	   		&	     	&$[mg/m^3]$ 	\\	\hline \hl
 \begin{figure}[htbp!]
   \begin{minipage}[c]{0.325\linewidth}
   		\centering
-      \begin{overpic}[trim=0 250 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite-SWIR_SeaDAS-MUMM.png}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.325\linewidth}
   	\centering
-      \begin{overpic}[trim=0 250 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite-SWIR_MoB-ELM.png}
       \end{overpic}
   \end{minipage}
   \hfill
   \begin{minipage}[c]{0.325\linewidth}
   		\centering
-      \begin{overpic}[trim=0 250 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite-SWIR_SeaDAS-SWIR.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite-SWIR_SeaDAS-SWIR.png}
       \end{overpic}  
   \end{minipage}
 
   \begin{minipage}[d]{0.325\linewidth}
   	\centering
-      \begin{overpic}[trim=0 250 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-MUMM_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-MUMM_MoB-ELM.png}
       \end{overpic}
   \end{minipage}
   \hfill
   \begin{minipage}[c]{0.325\linewidth}
   		\centering
-      \begin{overpic}[trim=0 250 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-SWIR_SeaDAS-MUMM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-SWIR_SeaDAS-MUMM.png}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.325\linewidth}
   	\centering
-      \begin{overpic}[trim=0 250 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=0 60 0 0,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-SWIR_MoB-ELM.png}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[d]{1.0\linewidth}
   	\centering
-      \begin{overpic}[trim=0 0 0 1500,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-SWIR_MoB-ELM.png}
+      \begin{overpic}[trim=20 0 0 343,clip,width=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS-SWIR_MoB-ELM.png}
       \end{overpic}
   \end{minipage}    
   % \caption{$C_a$ comparison among all the four method analyzed in this work. \label{fig:13262Chlor} } 
